# DeepDrop-SFE

./: .dockerignore  .gitignore  Dockerfile  README.md  development_log.txt  docker-compose.yml  gemini.md  pyproject.toml  requirements.txt  test_out.txt  validate_algorithm.py
deepdrop_sfe/: ai_engine.py
demo/: app.py  pil_helper.py
examples/: use_core_lib.py
src/: ai_engine.py  perspective.py  physics_engine.py
tests/: test_diagnostics.py  test_perspective.py  test_physics.py
