[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdrop-sfe"
version = "0.1.0"
description = "Contact Angle and SFE analysis library"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python-headless",
    "torch",
    "mobile_sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
]

[tool.setuptools.packages.find]
include = ["deepdrop_sfe*"]
